@startuml

skinparam defaultFontName "Fira Code"
skinparam class {
    FontStyle bold
    FontSize 12
}

scale 800*800

interface IObserver{
    +update()
}

interface ISubject{
    +registerObserver()
    +notifyObservers()
}

class Button{
    +caption
    +update()
}

class ComboBox{
    -createOptionCallback
    -data
    -defaultOptions
    -domObject
    -itemSelectedCallback
    -observers
    #clear()
    #onItemSelected()
    +notifyObservers()
    +registerObserver()
    +selectedIndex
    +setData()
    -bindEvents()
    -createOptions()
    -fillOptions()
}

class CascadingComboBox{
    -children
    #onItemSelected()
    +attachChild()
    +clear()
    +clearChildren()
    +setData()
    +updateChildren()
}

IObserver <|-down- Button
ISubject <|-down- ComboBox
ComboBox <|-down- CascadingComboBox
ISubject .right.>  IObserver


@enduml